# earnings-call-transcriber

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
agents/: analysis-agent.md  scraper-agent.md  test-agent.md  transcription-agent.md
data/: companies.yaml
data/audio/3105_win_semiconductors/: download_results.json
data/audio/tsmc_2025/: fetch_results.json
docker/: docker-compose.yml
scripts/: get_audio_call.py  test_audio_resolver_live.py  test_pipeline.py  test_registry_e2e.py  test_speaker_id.py  test_taiwan_scraper.py
scripts/scrapers/: __init__.py  base_scraper.py  get_3105_audio.py
src/: config.py  exceptions.py
src/audio/: __init__.py  downloader.py  preprocessor.py
src/models/: __init__.py  analysis.py  base.py  company.py  earnings_call.py
src/sources/: __init__.py  audio_resolver.py  base.py  hinet_ott.py  registry.py  taiwan.py
src/transcription/: __init__.py  diarization.py  pipeline.py  speaker_identification.py  speaker_identification_llm.py  vad_diarization.py  whisper_local.py
tasks/: lessions.md  todo.md
tests/: conftest.py
tests/test_sources/: test_audio_resolver.py  test_hinet_ott.py  test_registry.py  test_taiwan.py
tests/test_transcription/: test_preprocessor.py  test_whisper_local.py
